--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-sortable": "~0.13.3",
     "jquery-ui": "~1.11.4",
     "angular-local-storage": "~0.1.5",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angularbknd-sdk": "1.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
