--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "jquery-ui": "~1.11.4",
     "angular-local-storage": "~0.1.5",
     "angular-ui-router": "~0.2.13",
-    "angularbknd-sdk": "^1.6.1"
+    "angularbknd-sdk": "1.7.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
